frontend-route-update.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-microservice
  namespace: frontend
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway-system
    sectionName: https
  hostnames:
  - scdp-front-prod.agentprovision.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: backend-microservice
      namespace: backend
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-microservice
      port: 80
